Trivia: Fix link button content shift

--- a/triviabot/main.css
+++ b/triviabot/main.css
@@ -255,8 +255,6 @@ a:hover {
 }
 
 .linkBtn:active {
-  border-bottom: 0;
-  border-top: 2px solid #287CCE;
   box-shadow: 0 0 0 #202020;
 }
 
